2008-04-25  Sebastien Pouliot  <sebastien@ximian.com>

	* Defect.cs: Deal with the special 0xFEEFEE value present in PDB 
	files (for hidden or special case where the compiler does not want
	the debugger to look in).

2008-04-18  Sebastien Pouliot  <sebastien@ximian.com>

	* Runner.cs: Reset the events. The wizard runner can reuse the 
	runner with a different rule set.

2008-03-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Runner.cs: Don't initialize rules that are not active. This is
	useful when a runner decides to load a rule (e.g. to get more 
	information about it) then decide not to use it (think UI ;-). 
	This also makes it easier (well no change) to continue using 
	Active for rule optimizations.

2008-03-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Rule.cs: Cache Type. This saves 2% (about 16mb) of the memory 
	required to process all Mono 2.0 assemblies.

2008-03-07  Sebastien Pouliot  <sebastien@ximian.com>

	* TestRunner.cs: Add methods to allow easier testing of the 
	events.

2008-03-04  Sebastien Pouliot  <sebastien@ximian.com>

	* Rule.cs: Reduce code duplication between Problem and Solution
	properties.

2008-03-03  Sebastien Pouliot  <sebastien@ximian.com>

	* BasicIgnoreList.cs: Seal inner class.
	* Runner.cs: Add back code removed in last commit.

2008-02-17  Sebastien Pouliot  <sebastien@ximian.com>

	* BasicIgnoreList.cs: Basic implementation, with storage, for
	keeping an ignore list.
	* IIgnoreList.cs: New. Interface to ignorance ;-)
	* IRule.cs: Add FullName.
	* Rule.cs: Implement FullName using the type full name.
	* Runner.cs: Add support to ignore some known defects (or false 
	positives).
	* TestRunner.cs: Implement IIgnoreList.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyResolver.cs: Fix NRE when resolving some methods
	* Defect.cs: Make ExtractFirst methods static. Rename 
	Get[Type|Method]FromLocation to Find*
	* Runner.cs: Handle case where MDB is unavailable.