@@ -36,11 +36,6 @@ namespace Gendarme.Framework {
 
 	public class Defect {
 
-		// http://blogs.msdn.com/jmstall/archive/2005/06/19/FeeFee_SequencePoints.aspx
-		private const int PdbHiddenLine = 0xFEEFEE;
-
-		private static string AlmostEqualTo = new string (new char [] { '\u2248' });
-
 		private IRule rule;
 		private IMetadataTokenProvider target;
 		private IMetadataTokenProvider location;
@@ -48,6 +43,7 @@ namespace Gendarme.Framework {
 		private Confidence confidence;
 		private Instruction ins;
 		private string text;
+		private string source;
 
 		public Defect (IRule rule, IMetadataTokenProvider target, IMetadataTokenProvider location, Severity severity, Confidence confidence, string text)
 		{
@@ -83,6 +79,10 @@ namespace Gendarme.Framework {
 			get { return confidence; }
 		}
 
+		public Instruction Instruction {
+			get { return ins; }
+		}
+
 		public IMetadataTokenProvider Location {
 			get { return location; }
 		}
@@ -95,124 +95,11 @@ namespace Gendarme.Framework {
 			get { return severity; }
 		}
 
-		private static Instruction ExtractFirst (TypeDefinition type)
-		{
-			if (type == null)
-				return null;
-			foreach (MethodDefinition ctor in type.Constructors) {
-				Instruction ins = ExtractFirst (ctor);
-				if (ins != null)
-					return ins;
-			}
-			return null;
-		}
-
-		private static Instruction ExtractFirst (MethodDefinition method)
-		{
-			if ((method == null) || !method.HasBody)
-				return null;
-			Instruction ins = method.Body.Instructions [0];
-			return (ins.SequencePoint != null) ? ins : null;
-		}
-
-		private TypeDefinition FindTypeFromLocation ()
-		{
-			MethodDefinition method = (location as MethodDefinition);
-			if (method != null)
-				return (method.DeclaringType as TypeDefinition);
-
-			FieldDefinition field = (location as FieldDefinition);
-			if (field != null)
-				return (field.DeclaringType as TypeDefinition);
-
-			ParameterDefinition parameter = (location as ParameterDefinition);
-			if (parameter != null)
-				return (parameter.Method.DeclaringType as TypeDefinition);
-
-			return (location as TypeDefinition);
-		}
-
-		private MethodDefinition FindMethodFromLocation ()
-		{
-			ParameterDefinition parameter = (location as ParameterDefinition);
-			if (parameter != null)
-				return (parameter.Method as MethodDefinition);
-
-			return (location as MethodDefinition);
-		}
-
-		private static string FormatSequencePoint (SequencePoint sp, bool exact)
-		{
-			return FormatSequencePoint (sp.Document.Url, sp.StartLine, sp.StartColumn, exact);
-		}
-
-		private static string FormatSequencePoint (string document, int line, int column, bool exact)
-		{
-			string sline = (line == PdbHiddenLine) ? "unavailable" : line.ToString ();
-
-			// MDB (mono symbols) does not provide any column information (so we don't show any)
-			// there's also no point in showing a column number if we're not totally sure about the line
-			if (exact && (column > 0))
-				return String.Format (CultureInfo.InvariantCulture, "{0}({1},{2})", document, sline, column);
-
-			return String.Format (CultureInfo.InvariantCulture, "{0}({2}{1})", document, sline,
-				exact ? String.Empty : AlmostEqualTo);
-		}
-
-		private static string GetSource (Instruction ins)
-		{
-			// try to find the closed sequence point for this instruction
-			Instruction search = ins;
-			while (search != null) {
-				// skip empty entries and entries that are hidden (0xFEEFEE)
-				if ((search.SequencePoint != null) && (search.SequencePoint.StartLine != PdbHiddenLine))
-					return FormatSequencePoint (search.SequencePoint, (search == ins));
-
-				search = search.Previous;
-			}
-			// no details, we only have the IL offset to report
-			return String.Format (CultureInfo.InvariantCulture, "debugging symbols unavailable, IL offset 0x{0:x4}", ins.Offset);
-		}
-
 		public string Source {
 			get {
-				if (ins != null)
-					return GetSource (ins);
-
-				// rule didn't provide an Instruction but we do our best to
-				// find something since this is our only link to the source code
-
-				Instruction candidate;
-				TypeDefinition type = null;
-
-				// MethodDefinition, ParameterDefinition
-				//	return the method source file with (approximate) line number
-				MethodDefinition method = FindMethodFromLocation ();
-				if (method != null) {
-					candidate = ExtractFirst (method);
-					if (candidate != null) {
-						int line = candidate.SequencePoint.StartLine;
-						// we approximate (line - 1, no column) to get (closer) to the definition
-						// unless we have the special 0xFEEFEE value (used in PDB for hidden source code)
-						if (line != PdbHiddenLine)
-							line--;
-						return FormatSequencePoint (candidate.SequencePoint.Document.Url, line, 0, false);
-					}
-					// we may still be lucky to find the (a) source file for the type itself
-					type = (method.DeclaringType as TypeDefinition);
-				}
-
-				// TypeDefinition, FieldDefinition
-				//	return the type source file (based on the first ctor)
-				if (type == null)
-					type = FindTypeFromLocation ();
-				candidate = ExtractFirst (type);
-				if (candidate != null) {
-					// we report only the source file of the first ctor (that reported something)
-					return candidate.SequencePoint.Document.Url;
-				}
-
-				return String.Empty;
+				if (source == null)
+					source = Symbols.GetSource (this);
+				return source;
 			}
 		}
 
